# WoArchiTect

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
build_tools/: Cargo.toml
src/: architecture.rs  executable.rs  main.rs  process.rs
src/detect/: current.rs  error.rs  mod.rs  pe.rs  process.rs
testbin/: Cargo.toml
testbin/src/: main.rs
