[package]
name = "testbin"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_System_Console", "Win32_System_Threading"] }

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
strip = true        # Automatically strip symbols from the binary.